force-app/main/default/objects/OpportunityLineItem/fields/AccrualAmount__c.field-meta.xml
<CustomField>
    <fullName>AccrualAmount__c</fullName>
    <label>Accrual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>