force-app/main/default/objects/OpportunityLineItem/fields/Margin_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Margin_Calculation__c</fullName>
    <formula>TotalPrice - (  Quantity  *   PricebookEntry.Cost__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>